# scope

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  data_process.py  environment.yml  hires_obs_simulator.py  pyproject.toml  readthedocs.yml  requirements.txt  run_simulation.py  setup.py
.github/workflows/: codeql.yml  python-package.yml
docs/: conf.py  doc_requirements.txt  index.rst
docs/pages/: api.rst  inputfile.rst  installation.rst  versioning.rst
src/scope/: __init__.py  _version.py  broadening.py  calc_quantities.py  ccf.py  constants.py  download_data.bash  emcee_fit_hires.py  grid.py  hires_obs_simulator.py  input.txt  input_output.py  io.py  logger.py  noise.py  rm_effect.py  run_simulation.py  scrape_igrins_etc.py  tellurics.py  utils.py
src/scope/tests/: conftest.py  test_broadening.py  test_calc_quantities.py  test_constants.py  test_emcee_fit_hires.py  test_io.py  test_rm.py  test_run_simulation.py  test_scraping.py  test_utils.py
tests/: test_broadening.py
