[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "scope"

authors = [
    {name = "Arjun Savel", email = "asavel@umd.edu"},
    {name= "Megan Bedell"},
    {name= "Eliza M.-R. Kempton"},
    {name= "Peter Smith"},
    {name= "Jacob L. Bean"},
    {name= "Lily L. Zhao"},
    {name= "Jorge A. Sanchez"},
    {name= "Michael R. Line"},
]

description = "Simulating high-resolution spectroscopy of exoplanet atmospheres."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["astronomy"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
     "numpy",
    "astropy>5.1",
    "scipy",
    "jax",
    "exoplanet",
    "tqdm",
    "emcee",
    "numba",
    "scikit-learn>=1.3.0",
    "matplotlib",
    "pandas",
    "exoplanet-core",
    "pymc>=4",
    "schwimmbad",
]

dynamic = ["version"]

[tool.setuptools_scm]


[project.urls]
Homepage = "https://github.com/arjunsavel/scope"
Issues = "https://github.com/arjunsavel/scope/issues"
Documentation = "scope-astr.readthedocs.io"

[tool.black]
target_version = ['py310', 'py311']

[tool.black_nbconvert]
target_version = ['py310', 'py311']
